--- a/build.xml
+++ b/build.xml
@@ -339,8 +339,11 @@
   </path>
   <property name="dep_cp" value="${toString:dep.runtime}" />
 
+  <target name="main" depends="jar-fastalign">
+  </target>
+
   <!--Creates independent version of ROTDIF  -->
-  <target name="main" depends="compile">
+  <target name="jar-fastalign" depends="compile">
 
     <copy file="LICENSE.txt" tofile="${build.home}/classes/META-INF/LICENSE.txt"/>
     <copy file="NOTICE.txt"  tofile="${build.home}/classes/META-INF/NOTICE.txt"/>
