--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>mhap</groupId>
 	<artifactId>mhap</artifactId>
-	<version>2.1.1</version>
+	<version>2.1.2</version>
 	<name>MinHash Alignment Process</name>
 	<build>
 		<resources>
@@ -134,4 +134,7 @@
 	</dependencies>
 	<url>https://github.com/marbl/MHAP</url>
 	<description>MinHash alignment process (MHAP pronounced MAP): locality sensitive hashing to detect overlaps and utilities.</description>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
